a morning coding session
idfk what changed but it still does not work so nothing ig but it does have 4 changed files so what am I doing with life AAAAAAA

--- a/src/styles/signin.css
+++ b/src/styles/signin.css
@@ -14,4 +14,11 @@
 
 .btn {
     margin: 10px;
+    min-width: 12rem;
+    min-height: 3rem;
+}
+
+.SignOut {
+    max-height: 3rem;
+    max-width: 8rem;
 }
