--- a/src/styles/signin.css
+++ b/src/styles/signin.css
@@ -14,8 +14,8 @@
 
 .btn {
     margin: 10px;
-    min-width: 12rem;
-    min-height: 3rem;
+    min-width: 12rem !important;
+    min-height: 3rem !important;
 }
 
 .SignOut {
