--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -5,3 +5,18 @@
     grid-area: nav;
     color: aliceblue;
 }
+
+.signoutnav {
+    margin-top: auto;
+    width: 3.2rem;
+    height: 3.2rem;
+    border-radius: 8px;
+    background-color: #00000000;
+    border-color: #00000000;
+    color: aliceblue;
+    box-shadow: 1px 1px 8px 1px rgb(0 0 0);
+}
+
+.signoutnav:hover {
+    box-shadow: 1.5px 1.5px 8px 1px rgb(0 0 0);
+}
