--- a/src/styles/signin.css
+++ b/src/styles/signin.css
@@ -1,10 +1,14 @@
 .signin-box {
-    background-color: #00000081;
+    background-color: #0E1628;
     position: absolute;
     height: 100%;
     width: 100%;
     display: grid;
     place-items: center;
+}
+
+.SignInTxt {
+    color: aliceblue;
 }
 
 .signinBtns {
@@ -14,8 +18,8 @@
 
 .btn {
     margin: 10px;
-    min-width: 12rem !important;
-    min-height: 3rem !important;
+    min-width: 12rem ;
+    min-height: 3rem;
 }
 
 .SignOut {
