--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -49,3 +49,14 @@
 .signoutnav:hover {
     box-shadow: 1.5px 1.5px 8px 1px rgb(0 0 0);
 }
+
+.serverName {
+    min-width: 2.8rem;
+    min-height: 2.8rem;
+    background-color: hsl(221, 52%, 12%);
+    margin: 8px;
+    border-radius: 5px;
+}
+.serverName:hover {
+    background-color: hsl(221, 52%, 10%);
+}
