30% progress done to a complete revamp

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,9 @@
-#root {
+:root {
+  background-color: #1D2D50;
+  color: aliceblue;
+}
+
+.mainapp {
   text-align: center;
   display: grid;
   grid-template-areas:
