--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -1,20 +1,24 @@
-:-webkit-scrollbar {
-  width: 10px;
+::-webkit-scrollbar {
+  width: 5px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #00000000; 
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: rgb(26, 26, 26); 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555; 
+}
+
+#chat {
+    grid-area: main;
 }
 
 .chathistory {
@@ -62,7 +66,12 @@
     caret-color: #f0f8ff;
     color: #f0f8ff;
     height: 4vh;
-    width: 97.8%;
+    width: -webkit-fill-available;
+    margin-left: 15px;
+    margin-right: 15px;
+    border-radius: 5px;
+    text-align: left;
+    padding-left: 10px;
     border: rgba(0, 0, 0, 0);
 }
 
@@ -70,9 +79,8 @@
     outline: none;
 }
 
-.messageBox {
-    background-color: #15213a;
-    margin-left: 15px;
-    height: 5vh;
-    width: 100%;
+.typingIndicator {
+    position: absolute;
+    padding: 15px;
+    right: 0;
 }
