--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11,8 +11,10 @@
   grid-template-columns: 1fr 18fr 4fr;
   height: 100vh;
   background-color: #1D2D50;
+  justify-items: left;
 }
 
 .app {
   grid-area: main;
+  width: 100%;
 }
