--- a/src/styles/app/navbar.scss
+++ b/src/styles/app/navbar.scss
@@ -1,18 +1,27 @@
 .nav {
-    display: grid;
-    grid-template-areas: 
+  display: grid;
+  grid-template-areas:
     "brand"
     "nav_area";
-    grid-template-rows: 32px;
+  grid-template-rows: 32px;
 }
 
 .branding {
-    margin-left: 3px;
-    margin-top: 5px;
+  margin-left: 3px;
+  margin-top: 5px;
 }
 
 .nav-div {
-    background-color: hsl(0, 0%, 0%);
-    border-top-right-radius: 8px;
-    color: hsl(208, 100%, 97%);
+  background-color: hsl(0, 0%, 0%);
+  border-top-right-radius: 8px;
+  color: hsl(208, 100%, 97%);
+  display: grid;
+  align-content: space-between;
+  justify-items: center;
+
+  .user-pfp {
+    border-radius: 50%;
+    width: 65%;
+    padding: 15px;
+  }
 }
