--- a/src/styles/app/app.scss
+++ b/src/styles/app/app.scss
@@ -4,5 +4,5 @@
     grid-template-columns: 90px;
     gap: 8px;
     height: 100vh;
-    background-color: #252525;
+    background-color: hsl(0, 0%, 15%);
 }
