shows channels now ig

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,9 @@
 /* ALL FONT IMPORTS ARE HERE */
 @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
 
 #root {
     height: 100vh;
