--- a/src/styles/app/chat.scss
+++ b/src/styles/app/chat.scss
@@ -45,6 +45,22 @@
     "typIndc"
     "msgBox";
   grid-template-rows: 12.5fr 0.5fr 50px;
+
+  .flex_c_c {
+    display: grid;
+    grid-template-areas: "chatzone channelzone";
+    grid-template-columns: 6fr 2fr;
+    width: 100%;
+  }
+
+  .channels {
+    margin: 16px;
+    margin-bottom: 0px;
+    border-radius: 12px;
+    background-color: hsl(0, 0%, 8%);
+    min-width: 200px;
+  }
+
   .chatHistory {
     height: 85vh;
     overflow-x: hidden;
@@ -107,7 +123,7 @@
     .message-cons {
       margin-block-start: 0;
       margin-block-end: 0;
-      padding-left: 3.5rem
+      padding-left: 3.5rem;
     }
   }
 
