Added more core features (check desc)
Account creation, profile picture fix, history throttle from api

--- a/src/styles/app/chat.scss
+++ b/src/styles/app/chat.scss
@@ -58,7 +58,7 @@
     margin-bottom: 0px;
     border-radius: 12px;
     background-color: hsl(0, 0%, 8%);
-    min-width: 200px;
+    // min-width: 200px;
   }
 
   .chatHistory {
@@ -110,6 +110,10 @@
         height: 3rem;
         position: relative;
         top: 20px;
+      }
+      .pfp-crop {
+        object-fit: cover;
+        aspect-ratio: 200/200;
       }
       .username {
         grid-area: username;
