--- a/src/styles/app/chat.scss
+++ b/src/styles/app/chat.scss
@@ -21,17 +21,6 @@
   }
 }
 
-.channelSel {
-  position: absolute;
-  top: 32px;
-  border-radius: 8px;
-  color: hsl(208, 100%, 97%);
-  box-shadow: 2px 2px 8px 2px rgba(13, 13, 13, 0.739);
-  background-color: hsl(0, 0%, 8%);
-  width: 20vw;
-  height: 80vh;
-}
-
 .chat-div {
   grid-area: chat_area;
 
@@ -59,6 +48,15 @@
     border-radius: 12px;
     background-color: hsl(0, 0%, 8%);
     // min-width: 200px;
+    .channelName {
+      background-color: hsl(0, 0%, 15%);
+      border-radius: 8px;
+      padding: 5px;
+      margin: 5px;
+      &:hover {
+        background-color: hsl(0, 0%, 20%);
+      }
+    }
   }
 
   .chatHistory {
