--- a/src/styles/app/chat.scss
+++ b/src/styles/app/chat.scss
@@ -98,6 +98,7 @@
   .message-div {
     margin-bottom: 0px;
     margin-left: 0.5rem;
+    margin-top: 7px;
     // padding: 0.3rem;
     border-radius: 5px;
     &:hover {
@@ -140,6 +141,7 @@
     .message-cons {
       margin-block-start: 0;
       margin-block-end: 0;
+      margin-top: 0px;
       padding-left: 3.5rem;
     }
   }
@@ -180,4 +182,26 @@
       }
     }
   }
+}
+
+
+#profile {
+  background-color: hsla(0, 0%, 10%, 0.85);
+  display: none;
+  position: absolute;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+}
+.viewer {
+  @include bg-grey(15%);
+  color: white;
+  border-radius: 12px;
+  padding: 12px;
+  width: 40vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  aspect-ratio: 1/1;
 }
